adapt sql parser classes